chore:updated scanner to use live scraper